@@ -5,6 +5,7 @@
 	* src/racoon/pfkey.c: don't use NULL pointer (Coverity)
 	* src/racoon/ipsec_doi.c: don't use NULL pointer (Coverity)
 	* src/racoon/isakmp.c: don't use NULL pointer (Coverity)
+	* src/racoon/oakley.c: don't use NULL pointer (Coverity)
 	
 2006-10-01  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/isakmp.c: Avoid using NULL pointer (Coverity)
